[tool.poetry]
name = "california"
version = "0.1.0"
description = "Project California"
authors = ["Fabio Ayres <fabioja@insper.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
scikit-learn = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
